Add unit tests for UsersController
- Implement tests for user sign-up, sign-in, password recovery, and password update functionalities.
- Ensure proper status codes and responses are returned for each endpoint.